--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="styles/home.css" />
     <link rel="stylesheet" href="styles/quienSoy.css" />
     <link rel="stylesheet" href="styles/animacion.css" />
-    <link rel="stylesheet" href="styles/curso.css" />
+    <link rel="stylesheet" href="styles/tecnologia.css" />
+    <link rel="stylesheet" href="styles/proyecto.css" />
 
     <title>Portafolio.</title>
   </head>
@@ -130,103 +131,119 @@
       </div>
     </section>
 
-    <!-- SECTION DONDE VSA LA SEGUNDA F -->OTO -->
-    <!-- section de mis  servicios -->
-    <section id="experencia" class="containedor">
-      <div>
-        <h2>Conocimientos técnicos y habilidades</h2>
-        <hr class="hrServicio" />
-        <br />
-        <br />
-
-        <h4>
-          <span class="icon-embed2">&nbsp&nbsp</span>Desarrollo Front-End (lado
-          del cliente)
-        </h4>
-        <br />
-        <div class="tecnolgia">
-          Html5 <br />
-          Ccs3 <br />
-          Flexbox Css Grid <br />
-          Javascript <br />
-          Sublime text 3, <br />
-          Inkscape Frameworks: Bootstrap 4 <br />
-          Control de versiones: Git/GitHub <br />React<br />linux
-        </div>
+    <!--  FOTO Y QUIEN SOY -->
+    <!-- CONOCIMIENTO TECNOLGICOS -->
+    <section id="experencia" class="containerDeTecnogia">
+      <div class="misConocimiento">
+        <h2>Conocimientos Técnicos y Habilidades</h2>
+        <hr />
+      </div>
+      <div class="parrafoTecnolgia">
         <div>
-          <h4># Redes Sociales</h4>
-          <span class="icon-facebook"></span>
-          <span class="icon-instagram1"></span>
-          <span class="icon-twitter"></span>
+          <br />
+          <h4>
+            <span class="icon-embed2">&nbsp&nbsp</span>Desarrollo Front-End
+            (lado del cliente)
+          </h4>
+          <br />
+          <br />
+          <p>
+            Html5 <br />
+            Ccs3 <br />
+            Flexbox Css Grid <br />
+            Javascript <br />
+            Sublime text 3, <br />
+            Inkscape Frameworks: Bootstrap 5 <br />
+            Control de versiones: Git/GitHub <br />React.Js<br />sistema
+            operativo linux
+          </p>
         </div>
       </div>
-      <div>
-        <!-- <h2>Conocimientos técnicos y habilidades</h2> -->
+      <div class="containerIconos">
+        <a href="">
+          <img src="img/css.png" alt="" />
+          <p>30%</p>
+        </a>
+        <a href="">
+          <img src="img/html.png" alt="" />
 
-        <div class="contendorTecnogia">
-          <a href="">
-            <img src="img/css.png" alt="" />
-            <p>30%</p>
-          </a>
-          <a href="">
-            <img src="img/html.png" alt="" />
+          <p>30%</p>
+        </a>
+        <a href="">
+          <img src="img/git.png" alt="" />
 
-            <p>30%</p>
-          </a>
-          <a href="">
-            <img src="img/git.png" alt="" />
+          <p>30%</p>
+        </a>
+        <a href="#">
+          <img src="img/linux.png" alt="" />
+          <p>30%</p>
+        </a>
+        <a href="#">
+          <img src="img/reactimg.png" alt="" />
+          <p>30%</p>
+        </a>
+        <a href="">
+          <img src="img/boot.png" alt="" />
 
-            <p>30%</p>
-          </a>
-          <a href="#">
-            <img src="img/linux.png" alt="" />
-            <p>30%</p>
-          </a>
-          <a href="#">
-            <img src="img/reactimg.png" alt="" />
-            <p>30%</p>
-          </a>
-          <a href="">
-            <img src="img/boot.png" alt="" />
-
-            <p>30%</p>
-          </a>
-          <a href="#">
-            <img src="img/sublime.jpg" alt="" />
-            <p>60</p>
-          </a>
-          <a href="">
-            <img src="img/javaScript.jpeg" alt="" />
-            <p>50%</p>
-          </a>
-          <a href="">
-            <img class="img" src="img/gith.png" alt="" />
-            <p>50%</p>
-          </a>
-        </div>
+          <p>30%</p>
+        </a>
+        <a href="#">
+          <img src="img/sublime.jpg" alt="" />
+          <p>60</p>
+        </a>
+        <a href="">
+          <img src="img/javaScript.jpeg" alt="" />
+          <p>50%</p>
+        </a>
+        <a href="">
+          <img class="img" src="img/gith.png" alt="" />
+          <p>50%</p>
+        </a>
       </div>
     </section>
 
-    <section id="proyecto" class="contenedorProyectos">
-      <div>
-        <div class="containerParrafo">
-          <h2>Proyectos Web</h2>
-          <hr />
-        </div>
-        <div class="contenedorImagen">
-          <img src="img/musica.png" alt="" />
-          <img src="img/delei.png" alt="" />
-          <img src="img/ici.png" alt="" />
-          <img src="img/grid.png" alt="" />
-          <img src="img/scrip.png" alt="" />
-          <img src="img/simo.png" alt="" />
-          <img src="img/port.png" alt="" />
-          <img src="img/rosa.png" alt="" />
-          <img src="img/tele.png" alt="" />
-          <img src="img/sue.png" alt="" />
-          <img src="img/tabla.png" alt="" />
-          <img src="img/salu.png" alt="" />
-        </div>
+    <section id="proyecto" class="containerProyectos">
+      <div class="containerParrafo">
+        <h2>Proyectos Web</h2>
+        <hr />
+      </div>
+      <div class="containerImagen1">
+        <img src="img/musica.png" alt="" />
+      </div>
+      <div class="containerImagen2">
+        <img src="img/delei.png" alt="" />
+      </div>
+      <div class="containerImagen3">
+        <img src="img/ici.png" alt="" />
+      </div>
+      <div class="containerImagen4">
+        <img src="img/grid.png" alt="" />
+      </div>
+      <div class="containerImagen5">
+        <img src="img/scrip.png" alt="" />
+      </div>
+      <div class="containerImagen6">
+        <img src="img/simo.png" alt="" />
+        <p>html css javascrip</p>
+      </div>
+      <div class="containerImagen7">
+        <img src="img/port.png" alt="" />
+      </div>
+
+      <div class="containerImagen8">
+        <img src="img/rosa.png" alt="" />
+      </div>
+      <div class="containerImagen9">
+        <img src="img/tele.png" alt="" />
+      </div>
+      <div class="containerImagen10">
+        <img src="img/sue.png" alt="" />
+      </div>
+      <div class="containerImagen11">
+        <img src="img/tabla.png" alt="" />
+      </div>
+      <div class="containerImagen12">
+        <img src="img/salu.png" alt="" />
       </div>
     </section>
     <footer>
@@ -237,12 +254,6 @@
           <hr class="hrServicio" />
           <span class="icon-mail"> torcoromaarias@gmail.com</span>
         </div>
-
-        <div class="miNombre">
-          <p>Torcoroma Arias Ascanio-Desarrolladora de paginas web</p>
-          <p>@2021 creditos de web</p>
-        </div>
-
         <div class="redesSociales">
           <a href="#">
             <img src="img/twuter.png" alt="" />
@@ -254,9 +265,13 @@
             <img src="img/facebo.png" alt="" />
           </a>
         </div>
+        <div class="miNombre">
+          <p>Torcoroma Arias Ascanio-Desarrolladora de paginas web</p>
+          <p>@2021 creditos de web</p>
+        </div>
       </div>
     </footer>
-    <!--  <div class="burbujas">
+    <div class="burbujas">
       <div class="burbuja">HTML5</div>
       <div class="burbuja">CSS3</div>
       <div class="burbuja">JAVASCRIPT</div>
@@ -270,7 +285,7 @@
       <div class="burbuja">11</div>
       <div class="burbuja">GITHUB</div>
       <div class="burbuja">JAVASCRIPT</div>
-    </div> -->
+    </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- <script src="/static/ext/aos.js" ></script>  -->
