--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="home" class="contenedor_negro">
       <div class="capaOscura">
         <div class="row">
-          <div class="col-md-6 columLetras">
+          <div data-aos="flip-left" class="col-md-6 columLetras">
             <a class="animacion" href="#cursos">
               <p>Hola, mi nombre es:</p>
               <h2>TORCOROMA ARIAS ASCANIO</h2>
@@ -106,9 +106,8 @@
     <section id="sombre" class="containerQuienSoy">
       <div data-aos="flip-left" class="acercaDeMi">
         <h2>Acerca De Mi</h2>
-        <hr />
+
         <p class="servicioHacer">¿Qué servicios hago?</p>
-        <hr class="hrServicio" />
       </div>
 
       <div data-aos="zoom-in-left" class="miFoto">
@@ -117,7 +116,7 @@
 
       <div data-aos="fade-up" class="quienSoy">
         <a class="text-center" href="">
-          <span class="display-6 spanSoy"> Soy desarrollador</span>
+          <span class="display-6 spanSoy"> Soy desarrolladora</span>
           <span class="display-5 colorDeveloper">Wed </span><br />
 
           <h3 class="soy">
@@ -127,7 +126,7 @@
             escoji ser Developer
           </h3>
           <br />
-          <button id="boton" class="boton2 btn">descargar dv</button>
+          <button id="boton" class="boton1 btn">descargar dv</button>
         </a>
       </div>
     </section>
@@ -139,7 +138,6 @@
         <h2 data-aos-easing="ease-out-cubic">
           Conocimientos Técnicos y Habilidades
         </h2>
-        <hr />
       </div>
       <div class="parrafoTecnolgia">
         <div data-aos="zoom-out-left">
@@ -206,58 +204,57 @@
     </section>
 
     <section id="proyecto" class="containerProyectos">
-      <div data-aos="fade-down" class="containerParrafo">
+      <div data-aos="flip-left" class="containerParrafo">
         <h2>Proyectos Web</h2>
-        <hr />
       </div>
-      <div data-aos="fade-left" class="containerImagen1">
+      <div data-aos="flip-left" class="containerImagen1">
         <img src="img/musica.png" alt="" />
       </div>
-      <div data-aos="fade-left" class="containerImagen2">
+      <div data-aos="flip-left" class="containerImagen2">
         <img src="img/delei.png" alt="" />
       </div>
-      <div data-aos="fade-left" class="containerImagen3">
+      <div data-aos="flip-left" class="containerImagen3">
         <img src="img/ici.png" alt="" />
       </div>
-      <div data-aos="fade-left" class="containerImagen4">
+      <div data-aos="flip-left" class="containerImagen4">
         <img src="img/grid.png" alt="" />
       </div>
-      <div class="containerImagen5">
+      <div data-aos="flip-left" class="containerImagen5">
         <img src="img/scrip.png" alt="" />
       </div>
-      <div class="containerImagen6">
+      <div data-aos="flip-left" class="containerImagen6">
         <img src="img/simo.png" alt="" />
         <p>html css javascrip</p>
       </div>
-      <div class="containerImagen7">
+      <div data-aos="flip-left" class="containerImagen7">
         <img src="img/port.png" alt="" />
       </div>
 
-      <div class="containerImagen8">
+      <div data-aos="flip-left" class="containerImagen8">
         <img src="img/rosa.png" alt="" />
       </div>
-      <div class="containerImagen9">
+      <div data-aos="flip-left" class="containerImagen9">
         <img src="img/tele.png" alt="" />
       </div>
-      <div class="containerImagen10">
+      <div data-aos="flip-left" class="containerImagen10">
         <img src="img/sue.png" alt="" />
       </div>
-      <div class="containerImagen11">
+      <div data-aos="flip-left" class="containerImagen11">
         <img src="img/tabla.png" alt="" />
       </div>
-      <div class="containerImagen12">
+      <div data-aos="flip-left" class="containerImagen12">
         <img src="img/salu.png" alt="" />
       </div>
     </section>
     <footer>
       <div id="contacto" class="contenedorFooter">
-        <div class="contacto">
+        <div data-aos="flip-left" class="contacto">
           <span class="icon-mobile"> Tel (57)3124633147</span>
 
           <hr class="hrServicio" />
           <span class="icon-mail"> torcoromaarias@gmail.com</span>
         </div>
-        <div class="redesSociales">
+        <div data-aos="flip-left" class="redesSociales">
           <a href="#">
             <img src="img/twuter.png" alt="" />
           </a>
@@ -268,26 +265,29 @@
             <img src="img/facebo.png" alt="" />
           </a>
         </div>
-        <div class="miNombre">
+        <div data-aos="flip-left" class="miNombre">
           <p>Torcoroma Arias Ascanio-Desarrolladora de paginas web</p>
           <p>@2021 creditos de web</p>
         </div>
       </div>
     </footer>
     <div class="burbujas">
-      <div class="burbuja">HTML5</div>
-      <div class="burbuja">CSS3</div>
-      <div class="burbuja">JAVASCRIPT</div>
-      <div class="burbuja">GIT</div>
-      <div class="burbuja">REACT.JS</div>
-      <div class="burbuja">6</div>
       <div class="burbuja"></div>
-      <div class="burbuja">BOOTSTRAP</div>
-      <div class="burbuja">9</div>
-      <div class="burbuja">SUBLEME TEXT</div>
-      <div class="burbuja">11</div>
-      <div class="burbuja">GITHUB</div>
-      <div class="burbuja">JAVASCRIPT</div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
     </div>
 
     <script src="js/js/bootstrap.bundle.min.js"></script>
