--- a/index.html
+++ b/index.html
@@ -57,16 +57,18 @@
                 >
               </li>
               <li>
-                <a class="combiarColor" id="cuerso" href="#experencia"
+                <a class="combiarColor" id="conocer" href="#experencia"
                   >Conocimiento</a
                 >
               </li>
 
               <li class="nav-item">
-                <a class="combiarColor" id="tema" href="#proyecto">Proyectos</a>
+                <a class="combiarColor" id="proyectos" href="#proyecto"
+                  >Proyectos</a
+                >
               </li>
               <li class="nav-item">
-                <a class="combiarColor" id="lista" href="#contacto"
+                <a class="combiarColor" id="contactos" href="#contacto"
                   >contactos</a
                 >
               </li>
