--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </li>
               <li class="">
                 <a class="combiarColor" id="acerca" href="#sombre"
-                  >Acerca De Mi</a
+                  >Acerca de mi</a
                 >
               </li>
               <li>
@@ -90,10 +90,9 @@
                 Y soy <span class="colorDevenloper"> &nbsp &nbspDeveloper</span>
               </h4>
               <br />
-              <button id="botonCurso" class="btn boton1 font-weight-old">
-                VER CURSOS
-              </button>
             </a>
+
+            <a href="#proyecto" class="boton1 btn">MIS PROYECTOS</a>
           </div>
 
           <div data-aos="fade-up" class="col-md-6 containeImg">
@@ -107,9 +106,9 @@
 
     <section id="sombre" class="containerQuienSoy">
       <div data-aos="flip-left" class="acercaDeMi">
-        <h2>Acerca De Mi</h2>
+        <h2>Acerca de mi</h2>
 
-        <p class="servicioHacer">¿Qué servicios hago?</p>
+        <p class="servicioHacer">¿Qué servicios presto?</p>
       </div>
 
       <div data-aos="zoom-in-left" class="miFoto">
@@ -122,13 +121,16 @@
           <span class="display-5 colorDeveloper">Wed </span><br />
 
           <h3 class="soy">
-            Soy una persona comprometida y responsable con lo que hago me gusta
-            y me apaciona mi trabajo. aprendo rapido en cuanto me lo propongo
-            quiero dar todo de mi me gusta aprender cosas nuevas por esta razon
-            escoji ser Developer
+            Soy una persona comprometida y responsable con lo que hago, me gusta
+            y me apaciona mi trabajo. aprendo rapido si se requiere, dare lo
+            mejor de mi en cada proyecto, me gusta aprender cosas nuevas por
+            esta razon escoji ser Desarrolladora web
           </h3>
           <br />
-          <button id="boton" class="boton1 btn">descargar dv</button>
+        </a>
+
+        <a id="boton" class="boton1 btn" href="https://github.com/torco34">
+          DESCARGAR CV
         </a>
       </div>
     </section>
@@ -138,7 +140,7 @@
     <section id="experencia" class="containerDeTecnogia">
       <div data-aos="flip-left" class="misConocimiento">
         <h2 data-aos-easing="ease-out-cubic">
-          Conocimientos Técnicos y Habilidades
+          Conocimientos técnicos y habilidades
         </h2>
       </div>
       <div class="parrafoTecnolgia">
@@ -207,7 +209,7 @@
 
     <section id="proyecto" class="containerProyectos">
       <div data-aos="flip-left" class="containerParrafo">
-        <h2>Proyectos Web</h2>
+        <h2>Proyectos web</h2>
       </div>
       <div data-aos="flip-left" class="containerImagen1">
         <img src="img/musica.png" alt="" />
